fixed not saving settings and better code

--- a/ui/settings.html
+++ b/ui/settings.html
@@ -1,6 +1,6 @@
 <html>
 <head></head>
-<script type="text/javascript" src="../jquery-3.1.0.min.js"></script>
+<script type="text/javascript" src="../lib/jquery-3.1.0.min.js"></script>
 <script type="text/javascript" src="settings.js"></script>
 <body>
   <div id="settings">
